syntax = "proto3";

package motif;

option go_package = "github.com/nico-i/photo-ops/services/motif/proto";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";


// The motif service definition.
service MotifService {
	// Returns bounding box information for the subject in the image.
	rpc GetLocalImageBoundingBox (ImageRequest) returns (BoundingBox) {
		option (google.api.http) = {
			post: "/v1/bbox-local"
			body: "*"
		};
	}

		// Returns the image used to generate the bounding box with the bounding box drawn on it.
	rpc GetLocalImageBoundingBoxDebug (ImageRequest) returns (Base64Image) {
		option (google.api.http) = {
			post: "/v1/bbox-local/debug"
			body: "*"
		};
	}
}


message ImageRequest {
	oneof image {
		string path = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
			description: "The path to the image file on the server."
			format: "string",
			example: "\"/home/user/image.jpg\""
		}];
		Base64Image base64 = 2;
	}
}

message Base64Image {
	string data = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
		description: "The image data encoded in base64."
		format: "string",
		example: "iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAABjElEQVRIS+2VvUoDQRCFv7/"
		}];
}

// The response message containing bounding box coordinates.
message BoundingBox {
	int32 x = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
		description: "The x pixel coordinate of the top left corner of the bounding box."
		format: "int32",
		example: "100"
	}];
	int32 y = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
		description: "The y pixel coordinate of the top left corner of the bounding box."
		format: "int32",
		example: "100"
	}];
	int32 width = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
		description: "The width of the bounding box."
		format: "int32",
		example: "100"
	}];
	int32 height = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
		description: "The height of the bounding box."
		format: "int32",
		example: "100"
	}];
}
